--- a/01-gallery.html
+++ b/01-gallery.html
@@ -8,6 +8,8 @@
   <title>Image gallery</title>
   <link rel="stylesheet" href="css/common.css" />
   <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="dist/basicLightbox.min.css">
+
 </head>
 
 <body>
